--- a/final-project-frontend/public/index.html
+++ b/final-project-frontend/public/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- HAPUS baris ini:
     <script type="module" src="/src/main.jsx"></script>
+    -->
   </body>
 </html>
